2003-04-30  John Dallaway  <jld@ecoscentric.com>

	* common/eCosStd.h: Update version string to "2.net".
	  Use WSAEWOULDBLOCK under Cygwin.

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* common/configure, common/Makefile.in:
	Regenerate after acinclude.m4 update

2003-01-25  John Dallaway  <jld@ecoscentric.com>

	* common/Collections.cpp: #include <winsock2.h> early for Cygwin
	builds to eliminate fd_set compiler warning

	* common/eCosSocket.cpp: Add newline at end of file to eliminate
	compiler warning


2003-01-20  John Dallaway  <jld@ecoscentric.com>

	* common/eCosThreadUtils.cpp:
	Use "try" rather than "__try" for Cygwin builds.

	* common/eCosStd.h:
	#include winsock2.h and process.h for Cygwin builds.

	* common/Properties.cpp:
	Use MIN macro rather than min() for portability.

2002-08-03  Bart Veer  <bartv@ecoscentric.com>

	* common/Makefile.am, common/configure.in, common/acinclude.m4:
	Rework host-side autoconf support

2000-09-15  Jesper Skov  <jskov@redhat.com>

	* common/Makefile.in: Regenerated.
	* common/configure: Ditto.

	* common/eCosSocket.h: Made SSReadResult enum public.

	* common/Makefile.am: Added autoconf/make support.
	* common/Makefile.in: Ditto.
	* common/configure: Ditto.
	* common/configure.in: Ditto.
	* common/acinclude.m4: Ditto.
	* common/aclocal.m4: Ditto.

	* common/wcharunix.h (_tperror): Make putenv convert String to
	char*.

2000-08-01  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* common/eCosSerial.h: 
	* common/eCosSerial.cpp:
	Add support for setting RTSCTS, DSRDTR and XONXOFF flow control
	for both win32 and unix

2000-04-14 Simon FitzMaurice <sdf@redhat.co.uk>
  * common\Subprocess.cpp
    common\Subprocess.h

  Always attempt to kill a process explicitly (don't let Cygwin processes linger)

2000-04-13 Simon FitzMaurice <sdf@redhat.co.uk>
  * common\eCosSerial.cpp
    common\eCosSocket.cpp
    common\eCosTrace.cpp

  Tidy up timestamp output.
    
2000-04-11 Simon FitzMaurice <sdf@redhat.co.uk>